// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Play/pause button Icon updates 1`] = `
<svg
  viewBox="0 0 36 36"
>
  <path
    d="M 12,26 18.5,22 18.5,14 12,10 z M 18.5,22 25,18 25,18 18.5,14 z"
    fill="white"
  />
</svg>
`;

exports[`Play/pause button Icon updates 2`] = `
<svg
  viewBox="0 0 36 36"
>
  <path
    d="M 12 26 h 4 v -16 h -4 z M 21 26 h 4 v -16 h -4 z"
    fill="white"
  />
</svg>
`;

exports[`Play/pause button Icon updates 3`] = `
<svg
  viewBox="0 0 36 36"
>
  <path
    d="M 12,26 18.5,22 18.5,14 12,10 z M 18.5,22 25,18 25,18 18.5,14 z"
    fill="white"
  />
</svg>
`;
